# TitanCrucible

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  justfile  prompt-log.md  pyproject.toml
.claude/: settings.local.json
agent/: core.py  models.py  planner.py  state.py  tracer.py
agent/tools/: arxiv.py  base.py  fred.py  wikipedia.py
eval/: benchmark.py  questions.json
tests/: test_arxiv.py  test_fred.py  test_state.py  test_wikipedia.py
