[project]
name = "titan-crucible"
version = "0.1.0"
description = "Multi-tool research agent for banking startup"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai",
    "pydantic",
    "requests",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "ty",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
